# infinity-agent

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  README.md  architecture_review.md  docker-compose.yml  promptfooconfig.yaml  pyproject.toml
.claude/: settings.local.json
docs/: AGENTS.md  ARCHITECTURE_REVIEW_PRESENTATION.md  CHALLENGE_READINESS.md  DATABASE_STATE.md  DEPLOYMENT.md  DEPLOY_VERCEL_RAILWAY_EVOLUTION.md  FINAL_REVIEW.md  MOCK_DATA.md  POST_DEPLOY_CHECKLIST.md  PRESENTATION_QA.md  README.md  VIDEO_PRESENTATION.md
docs/archive/: implementation_plan_legacy.md
frontend/: app.js  index.html
frontend-react/: .env.example  index.html  package-lock.json  package.json
frontend-react/src/: App.jsx  main.jsx  styles.css
private_docs/: ARCHITECTURE_AND_VIDEO_PITCH.md
scripts/: evaluator_smoke.py  ingest.py
src/: __init__.py  container.py  main.py  settings.py
src/agents/: __init__.py  graph.py  routing_rules.py  state.py  swarm_config.py
src/api/: middleware.py  security.py
src/domain/: __init__.py  exceptions.py
src/infrastructure/: __init__.py
src/rag/: chunker.py  ingest_pipeline.py  scraper.py
tests/: conftest.py  promptfoo_provider.py
tests/integration/: test_api.py
tests/unit/: test_auth_overlay_policy.py  test_brave_searcher.py  test_chunker.py  test_container.py  test_guardrails.py  test_knowledge_overlap_fallback.py  test_knowledge_web_fallback.py  test_promptfoo_provider.py  test_router_node_deterministic.py  test_sentiment_tools.py  test_session_store.py  test_sidebar_suggestions.py  (+2 more)
(+49 files in other folders)
