[project]
name = "infinity-agent"
version = "1.0.0"
description = "Multi-agent AI swarm for InfinitePay customer service — CloudWalk Coding Challenge"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gustavo" }]

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Agent Orchestration
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openrouter>=0.2.0",

    # RAG
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",

    # Web Scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",

    # Web Search
    "duckduckgo-search>=7.0.0",

    # Utilities
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
